<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_green"
    tools:context=".ui.destinations.main_title.MainActivity">

    <Button
        android:id="@+id/toQuizButton"
        android:text="@string/button_main_quiz"
        app:icon="@drawable/ic_main_button_quiz"
        app:layout_constraintBottom_toTopOf="@+id/toStatisticButton"
        app:layout_constraintEnd_toEndOf="@+id/toStatisticButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/toStatisticButton"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/hirakana_button_default" />

    <Button
        android:id="@+id/toStatisticButton"
        android:text="@string/button_main_statistics"
        app:icon="@drawable/ic_main_button_statistics"
        app:layout_constraintBottom_toTopOf="@+id/toCharactersButton"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/toQuizButton"
        style="@style/hirakana_button_default" />

    <Button
        android:id="@+id/toCharactersButton"
        android:text="@string/button_main_characters"
        app:icon="@drawable/ic_main_button_characters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toStatisticButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/toStatisticButton"
        app:layout_constraintTop_toBottomOf="@+id/toStatisticButton"
        style="@style/hirakana_button_default" />

    <ImageView
        android:id="@+id/background_tree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sakura_tree"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/background_temple"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:srcCompat="@drawable/japanese_temple"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/title_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="-90"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_tree"
        app:srcCompat="@drawable/title_logo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/mascot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/description_get_info"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:srcCompat="@drawable/mascot" />

    <ImageView
        android:id="@+id/chatBubble"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/mascot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toQuizButton"
        app:layout_constraintTop_toTopOf="@id/chatText"
        app:srcCompat="@drawable/chat_bubble"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/description_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_info" />

    <ImageView
        android:id="@+id/button_bgm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/description_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_about"
        app:srcCompat="@drawable/ic_main_bgm_on" />

    <androidx.cardview.widget.CardView
        android:id="@+id/challenge_popup"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:visibility="invisible"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/challenge_popup_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:contentDescription="@string/description_challenge_bg"
            android:elevation="0dp"
            android:rotation="-8"
            app:srcCompat="@drawable/bg_challenge_popup" />

        <TextView
            android:id="@+id/challenge_popup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="8dp"
            android:paddingBottom="5dp"
            android:rotation="-20"
            android:rotationY="15"
            android:text="Challenge"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:ignore="RtlSymmetry" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/chatText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="14dp"
        android:text="@string/greetings"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/mascot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/chatBubble" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>