<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige_green">

        <Button
            android:id="@+id/dialog_answerInfo_ok"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_buttons_main"
            android:paddingBottom="4dp"
            android:text="@string/dialog_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_chatBubble"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/quiz_chatBubble"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/chat_bubble"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/mascot_quiz"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="0.825"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline25"
            app:layout_constraintTop_toBottomOf="@+id/correctAnswerAndTranslation"
            app:srcCompat="@drawable/bg_image_mascot"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/correctAnswerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_answerInfo_correctAnswerText"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal|top"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/guideline23"
            app:layout_constraintTop_toBottomOf="@+id/userAnswerAndTranslation" />

        <TextView
            android:id="@+id/userAnswerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_answerInfo_userAnswerText"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal|top"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/guideline23"
            app:layout_constraintTop_toTopOf="@+id/guideline24" />

        <TextView
            android:id="@+id/userAnswerAndTranslation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal|top"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline23"
            app:layout_constraintTop_toBottomOf="@+id/userAnswerText"
            tools:text="みゃ = MYA" />

        <TextView
            android:id="@+id/correctAnswerAndTranslation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal|top"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline23"
            app:layout_constraintTop_toBottomOf="@+id/correctAnswerText"
            tools:text="父 = CHICHI" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.59" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.065" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>